--- a/fogliodistile.css
+++ b/fogliodistile.css
@@ -8,14 +8,14 @@ color: black;
 font: 36px "Times New Roman", sans-serif;
 }
 p.descrizione {
-margin-left: 100px;
-margin-right: 100px;
+margin-left: 150px;
+margin-right: 150px;
 }
 div.spuntaSesso {
 background-color: #aec1d1;
-width: 358px;
 margin-left: auto; 
 margin-right: auto;
+width: 358px; 
 border: 1px solid black;
 padding: 5px;
 }
@@ -31,8 +31,6 @@ button {
 padding: 5px;
 margin-left: auto; 
 margin-right: auto;
-position: relative;
-right: -30px;
 border: 1px solid black;
 }
 
@@ -54,7 +52,7 @@ td, th {
 border: 1px solid black;
 padding: 5px;
 }
-input {
+#tempo, #t1 , #d1{
 width: 80%
 }
 input:hover {
